fix: also delete monitoring